# Temperator

./: .gitignore  LICENSE  Makefile  go.work
arduino/: pool-temperator.ino
arduino/pool-temperator/: display.h  io.h  pool-temperator.ino  sensors.h  wifi.h
frontend/: .gitignore  README.md  pubspec.yaml
frontend/android/: build.gradle
frontend/android/app/: build.gradle
frontend/android/app/src/main/: AndroidManifest.xml
frontend/android/app/src/profile/: AndroidManifest.xml
frontend/ios/Runner/: Info.plist
frontend/ios/Runner.xcodeproj/: project.pbxproj
frontend/lib/: main.dart
frontend/lib/src/: app.dart
frontend/lib/src/messages/: message.dart
frontend/lib/src/provider/: router.dart  temperature.dart
frontend/lib/src/repository/: temperature.dart
frontend/lib/src/screen/home/: home_screen.dart
frontend/lib/src/screen/init/: init_screen.dart
frontend/lib/src/types/: api.dart  api.g.dart
frontend/web/: index.html  manifest.json
frontend/web/splash/: style.css
local-server/: config.default.yml  go.mod  main.go  server.service
public-server/: config.default.yml  db.go  go.mod  main.go
server/: .dockerignore  Cargo.toml  Dockerfile
server/pool-private/: Cargo.toml
server/pool-private/src/: main.rs
server/pool-public/: Cargo.toml
server/pool-public/migrations/2024-03-27-192648_create_data/: down.sql  up.sql
server/pool-public/src/: database.rs  main.rs  models.rs  schema.rs
server/pool-public/src/api/: v1.rs
server/pool-shared/: Cargo.toml
server/pool-shared/src/: types.rs
(+4 files in other folders)
