[package]
name = "pool-private"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "*", features = ["native-tls"]}
futures-util = "0.3.30"
pool-shared = { path = "../pool-shared" }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0"